spacing corrections - completed

--- a/css/about.css
+++ b/css/about.css
@@ -5,7 +5,7 @@
 }
 
 .about-top .text-container {
-    width: 95%;
+    width: 100%;
     padding: 0 1%;
     padding-bottom: 20px;  
 }
